<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/orig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:background="@color/transparent_background"
                android:src="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                app:layout_constraintTop_toTopOf="@+id/movie_image" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#6D6D80"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/movie_pg"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/movie_image"
                app:layout_constraintStart_toStartOf="@+id/movie_name" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/movie_genres"
                android:textColor="@color/content_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/movie_name"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            <RatingBar
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/content_color"
                android:rating="4"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="@+id/movie_genres"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:text="@string/movie_reviews"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
                app:layout_constraintStart_toEndOf="@+id/movie_rating"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres" />

            <TextView
                android:id="@+id/movie_storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_storyline"
                android:textColor="@color/white"
                android:layout_marginTop="28dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/movie_rating"
                app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

            <TextView
                android:id="@+id/movie_expanded_storyline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/movie_expanded_storyline"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="@+id/movie_storyline"
                app:layout_constraintTop_toBottomOf="@+id/movie_storyline" />

            <TextView
                android:id="@+id/movie_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:text="@string/movie_cast"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_expanded_storyline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="@+id/movie_cast"
                app:layout_constraintTop_toBottomOf="@+id/movie_cast">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_actor_size"
                        android:layout_height="@dimen/icon_actor_size"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/first_ch" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/movie_first_actor"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_actor_size"
                        android:layout_height="@dimen/icon_actor_size"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/second_ch" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/movie_second_actor"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_actor_size"
                        android:layout_height="@dimen/icon_actor_size"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/third_ch" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/movie_third_actor"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_actor_size"
                        android:layout_height="@dimen/icon_actor_size"
                        android:src="@drawable/forth_ch" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/movie_fourth_actor"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>